--- a/wp-content/themes/fruskogorac/assets/scss/theme/variables/_colors.scss
+++ b/wp-content/themes/fruskogorac/assets/scss/theme/variables/_colors.scss
@@ -9,8 +9,12 @@ $static-dark-title: #fefefe;
 // Theme colors
 $primary: #447821;
 $primary-hover: #375c1e;
-$secondary: #FFCC00;
+$secondary: #16F1FF;
 $secondary-hover: #ffbf0e;
+$gray-primary:rgba(255, 255, 255, 0.6);
+$neutral-blue:#11327B;
+$primary-green:#2AEF84;
+$background-color: #020E20;
 $gold: #F4AD17;
 $success: #3acc6c;
 $danger: #dd5555;
@@ -31,7 +35,7 @@ $black: #000;
 
 // Basics
 $light: #f9f9f9;
-$background: #fefefe;
+$background: $background-color;
 $title: #333;
 $text: #36334A;
 $border: #e9ecef;
