--- a/wp-content/themes/fruskogorac/assets/scss/theme/variables/_colors.scss
+++ b/wp-content/themes/fruskogorac/assets/scss/theme/variables/_colors.scss
@@ -2,20 +2,20 @@
 $static-white: #fff;
 $static-black: #222;
 $static-light-title: #333;
-$static-light-text: #36334A;
+$static-light-text: #36334a;
 $static-dark-text: #e2e2e2ff;
 $static-dark-title: #fefefe;
 
 // Theme colors
 $primary: #447821;
 $primary-hover: #375c1e;
-$secondary: #16F1FF;
+$secondary: #16f1ff;
 $secondary-hover: #ffbf0e;
-$gray-primary:rgba(255, 255, 255, 0.6);
-$neutral-blue:#11327B;
-$primary-green:#2AEF84;
-$background-color: #020E20;
-$gold: #F4AD17;
+$gray-primary: rgba(255, 255, 255, 0.6);
+$neutral-blue: #11327b;
+$primary-green: #2aef84;
+$background-color: #020e20;
+$gold: #f4ad17;
 $success: #3acc6c;
 $danger: #dd5555;
 $info: #3994df;
@@ -37,7 +37,7 @@ $black: #000;
 $light: #f9f9f9;
 $background: $background-color;
 $title: #333;
-$text: #36334A;
+$text: #36334a;
 $border: #e9ecef;
 $gray: #343a40;
 
