--- a/wp-content/themes/fruskogorac/assets/scss/theme/variables/_typography.scss
+++ b/wp-content/themes/fruskogorac/assets/scss/theme/variables/_typography.scss
@@ -1,5 +1,5 @@
 // Font size
-$font-size: 1rem;
+$font-size: 1.6rem;
 
 // Font weight
 $font-weight-light: var(--primary-font-weight-light);
@@ -18,7 +18,7 @@ $text-line-height: 1.4;
 $line-height-base: 1.65;
 
 // Letter spacing
-$title-letter-spacing: -.03em;
+$title-letter-spacing: -0.03em;
 $text-letter-spacing: normal;
 
 // Font family
