--- a/wp-content/themes/fruskogorac/assets/scss/theme/variables/_colors.scss
+++ b/wp-content/themes/fruskogorac/assets/scss/theme/variables/_colors.scss
@@ -12,6 +12,8 @@ $primary-hover: #375c1e;
 $secondary: #16f1ff;
 $secondary-hover: #ffbf0e;
 $gray-primary: rgba(255, 255, 255, 0.6);
+$gray-secondary: rgba(255, 255, 255, 0.5);
+$dark-background: rgba(0, 0, 0, 0.4);
 $neutral-blue: #11327b;
 $primary-green: #2aef84;
 $background-color: #020e20;
