--- a/wp-content/themes/fruskogorac/assets/scss/theme/sections/_navbar.scss
+++ b/wp-content/themes/fruskogorac/assets/scss/theme/sections/_navbar.scss
@@ -20,85 +20,164 @@
     }
   }
 }
+
 .header {
+
   height: 11.2rem;
   position: fixed;
   inset: 0;
   display: flex;
   align-items: center;
   border-bottom: 1.5px solid $gray-secondary;
-  a{
+
+  @media screen and (max-width: $lg) {
+    z-index: 3;
+  }
+
+  a {
     color: $white;
   }
+
   &--wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
+    .left-nav {}
 
-    .left-nav{
-
-    }
     .middle-nav {
+      transition: all 0.3s ease-in;
 
-      ul{
+      @media screen and (max-width: $lg) {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 11.2rem;
+        background-color: salmon;
+        transform: translateX(-100%);
+
+
+      }
+
+      ul {
         display: flex;
-    align-items: center;
-    gap: 48px;
-    
+        align-items: center;
+        gap: 4.8rem;
 
-        li{
+        @media screen and (max-width: $lg) {
+          flex-direction: column;
+          align-items: start;
+          gap: 0;
+          padding: 0 !important;
+        }
+
+        li {
           position: relative;
           padding: 4rem 0;
-          a{
-font-size: 18px;
-line-height: 32px;
+
+          @media screen and (max-width: $lg) {
+            padding: 3rem 2rem;
+            border-bottom: 2px solid $white;
+            width: 100%;
           }
-          &::after{
-            content:'';            
+
+          a {
+            font-size: 18px;
+            line-height: 32px;
+          }
+
+          &::after {
+            content: '';
             position: absolute;
             width: 7.6rem;
-            height:8px;
+            height: 8px;
             background-color: $white;
-            left:50%;
+            left: 50%;
             transform: translateX(-50%);
             bottom: 0px;
             display: none;
-
-            
-
-
-        
           }
-          &.current-menu-item{
-            &::after{
+
+          &.current-menu-item {
+            &::after {
               display: block;
 
+              @media screen and (max-width: $lg) {
+                padding: 2rem 0;
+                display: none;
+              }
             }
-            a{
+
+            a {
               font-weight: 500 !important;
-              
             }
           }
         }
+      }
+    }
+
+    .right-nav {
+      &.desktop {
+        @media (max-width: $lg) {
+          display: none;
+        }
 
       }
-      
 
-
-    }
-    .right-nav{
-      
-      padding:8px 1.6rem 8px 8px ;
+      padding: 8px 1.6rem 8px 8px;
       background-color: $dark-background;
       border-radius: 1.2rem;
       display: flex;
       gap: 1.6rem;
-      align-items:center ;
+      align-items: center;
       font-size: 2rem;
-      line-height:2.8rem ;
+      line-height: 2.8rem;
       font-weight: 500;
+
+      &.mobile {
+        display: none;
+
+        @media screen and (max-width: $lg) {
+          display: inline-block;
+          margin: 3rem 2rem 0;
+
+        }
+      }
+    }
+
+    .hamburger-menu {
+      cursor: pointer;
+      display: none;
+
+      @media (max-width: $lg) {
+        display: block;
+
+      }
+
+      .closed {
+        display: none;
+      }
     }
   }
+}
 
+body {
+  &.menu-open {
+    .middle-nav {
+      transform: translateX(0);
+
+    }
+
+    .hamburger-menu {
+
+      .open {
+        display: none;
+      }
+
+      .closed {
+        display: block !important;
+      }
+    }
+  }
 }
