--- a/wp-content/themes/fruskogorac/assets/scss/theme/variables/_headings.scss
+++ b/wp-content/themes/fruskogorac/assets/scss/theme/variables/_headings.scss
@@ -13,6 +13,7 @@
 }
 
 body {
+
   h1,
   .h1 {
     font-size: 15.6rem;
@@ -22,15 +23,28 @@ body {
 
   h2,
   .h2 {
-    font-size: 15.6rem;
-    line-height: 10rem;
+
+
+    font-size: 7.2rem;
+    line-height: 8.4rem;
+
+    @media (max-width : $lg) {
+      font-size: 4rem;
+      line-height: 5.6rem;
+    }
+
+    @media (max-width : $md) {
+      font-size: 3.2rem;
+      line-height: normal;
+    }
+
+
+
   }
 
   h3,
-  .h3 {
-  }
+  .h3 {}
 
   h4,
-  .h4 {
-  }
+  .h4 {}
 }
