SCSS Files Refactoring to stop using important

--- a/wp-content/themes/fruskogorac/assets/scss/theme.scss
+++ b/wp-content/themes/fruskogorac/assets/scss/theme.scss
@@ -1,7 +1,7 @@
 /*
 Theme: Fruskogorac
 Author Boldizar Santo (boldizar.santo@gmail.com)
-Website: startertheme.com
+Website: fruskogorac.com
 */
 
 // Variables
