--- a/wp-content/themes/fruskogorac/assets/scss/theme/variables/_colors.scss
+++ b/wp-content/themes/fruskogorac/assets/scss/theme/variables/_colors.scss
@@ -21,8 +21,7 @@ $gold: #f4ad17;
 $success: #3acc6c;
 $danger: #dd5555;
 $info: #3994df;
-$dark-green: #06516E;
-
+$dark-green: #06516e;
 
 // Grayscales
 $white: #fff;
@@ -47,3 +46,6 @@ $gray: #343a40;
 
 // Other values
 $shadow-opacity: 0.045;
+
+// animations
+$transition: all 0.3s ease-in;
