--- a/wp-content/themes/fruskogorac/assets/scss/theme/base/_default.scss
+++ b/wp-content/themes/fruskogorac/assets/scss/theme/base/_default.scss
@@ -31,8 +31,16 @@ body.fruskogorac {
 
 ul {
   list-style: none;
-  padding: 0 !important;
-  margin: 0 !important;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: $white;
+
+  &:hover {
+  }
 }
 
 ::-webkit-scrollbar {
