--- a/wp-content/themes/fruskogorac/blocks/about-us/about-us.scss
+++ b/wp-content/themes/fruskogorac/blocks/about-us/about-us.scss
@@ -1,44 +1,43 @@
 // Variables
-@import '../../assets/scss/theme/variables/block-index';
+@import "../../assets/scss/theme/variables/block-index";
 @import "../../assets/scss/theme/base/mixins";
 
 .section-about-us {
-    &--wrapper {
-        padding: 7rem 11.2rem;
-        background-color: $dark-green ;
-        border-radius: 1.2rem;
+  &--wrapper {
+    padding: 7rem 11.2rem;
+    background-color: $dark-green;
+    border-radius: 1.2rem;
 
-        @media (max-width:$md) {
-            padding: 4rem;
-        }
-
-        >div:first-of-type {
-            max-width: 37.8rem;
-            width: 100%;
-        }
-
-        &-title {
-            margin-bottom: 2rem;
-
-            h2 {
-                margin: 0 !important;
-            }
-        }
-
-        p {
-            margin-bottom: 4.8rem;
-            font-size: 18px;
-            line-height: 32px;
-
-
-            @media (max-width:$lg) {
-                margin-bottom: 2.4rem;
-            }
-        }
-
-        .right-nav {
-            max-width: 18.3rem;
-            width: 100%;
-        }
+    @media (max-width: $md) {
+      padding: 4rem;
     }
+
+    > div:first-of-type {
+      max-width: 37.8rem;
+      width: 100%;
+    }
+
+    &-title {
+      margin-bottom: 2rem;
+
+      h2 {
+        margin: 0;
+      }
+    }
+
+    p {
+      margin-bottom: 4.8rem;
+      font-size: 18px;
+      line-height: 32px;
+
+      @media (max-width: $lg) {
+        margin-bottom: 2.4rem;
+      }
+    }
+
+    .right-nav {
+      max-width: 18.3rem;
+      width: 100%;
+    }
+  }
 }
